# Asoutru

./: .gitignore  CMakeLists.txt  FINAL_CHECKLIST.md  IMPLEMENTATION_SUMMARY.md  PROJECT_STATUS.md  README.md  build-apk.sh  gradle.properties  gradlew  settings.gradle
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/viluaos/modmenu/: GLRenderer.java  MainActivity.java
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: strings.xml
extracted/include/: jni.h
extracted/include/GLES3/: gl3.h
extracted/include/android/: input.h  log.h  native_window.h
include/EGL/: egl.h
include/GLES2/: gl2.h
include/android/: keycodes.h
src/: Aimbot.cpp  Aimbot.h  Config.cpp  Config.h  Drawing.cpp  Drawing.h  ESP.cpp  ESP.h  GUI.cpp  GUI.h  Game.cpp  Game.h  Player.cpp  Player.h  Vector.h  imgui_impl_android.h
